nks-alb/nks-sample-services.yml
apiVersion: v1
kind: Service
metadata:
  name: naver
spec:
  type: NodePort
  selector:
    app: naver
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naver
  template:
    metadata:
      labels:
        app: naver
    spec:
      containers:
        - name: naver
          image: io.kr.ncr.ntruss.com/nks/hello:plain-text
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: cloud
spec:
  type: NodePort
  selector:
    app: cloud
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud
  template:
    metadata:
      labels:
        app: cloud
    spec:
      containers:
        - name: cloud
          image: io.kr.ncr.ntruss.com/nks/hello:plain-text
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: platform
spec:
  type: NodePort
  selector:
    app: platform
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform
  template:
    metadata:
      labels:
        app: platform
    spec:
      containers:
        - name: platform
          image: io.kr.ncr.ntruss.com/nks/hello:plain-text
          ports:
            - containerPort: 80
